[project]
name = "llm-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.125.0",
    "langchain>=1.2.0",
    "langchain-core>=1.2.2",
    "langchain-google-genai>=4.1.1",
    "uvicorn[standard]>=0.38.0",
]
